# ram-webgui

./: .gitignore  Cargo.toml  README.md  about-a2bf7914de193fc6.css  about-c750dd6c32f74f54.css  about-e06e5981598484f0.css  about-e49381989367d086.css  about.html  console-2224ac6c90f2c91a.css  console-56a61043f2a36de0.css  console-96dada0b27780710.css  fonts-89f4d04e1d2bae32.css  generate_cache_files.sh  generate_static.sh  index.html  loader-f9f833cf1c2e38ab.css  loader-fe921d8a9da6e2a1.css  manifest.json  monaco-tweaks-762ec1ba4e6e0956.css  ram-webgui-1036f560fa41a015.js  ram-webgui-1036f560fa41a015_bg.wasm  ram-webgui-2a332c643b573017.js  ram-webgui-2a332c643b573017_bg.wasm  ram-webgui-2d9a38cf897a55bf184f07325d0a760420c4276c5dda218f9bed759f3893a628a28cee4aa333c671f3f1452197cc3fc6.js  ram-webgui-2d9a38cf897a55bf184f07325d0a760420c4276c5dda218f9bed759f3893a628a28cee4aa333c671f3f1452197cc3fc6_bg.wasm  ram-webgui-306b09021d58391.js  ram-webgui-306b09021d58391_bg.wasm  ram-webgui-378fad1efbbf89f.js  ram-webgui-378fad1efbbf89f_bg.wasm  ram-webgui-3a55e86db04eaf7f.js  ram-webgui-3a55e86db04eaf7f_bg.wasm  ram-webgui-4186eca422bf71ef.js  ram-webgui-4186eca422bf71ef_bg.wasm  ram-webgui-4646097c082e439e.js  ram-webgui-4646097c082e439e_bg.wasm  ram-webgui-5304aa3d14c2c834.js  ram-webgui-5304aa3d14c2c834_bg.wasm  ram-webgui-591ecece33ef817c.js  ram-webgui-591ecece33ef817c_bg.wasm  ram-webgui-5c062852fc63d4f1d9242c3b99aabcb3a569017719f8fefde5ee42035a6d889781f142803e7e53ee5159b549c11add30.js  (+40 more)
.github/workflows/: deploy-to-gh-pages.yml  pr_check.yml
assets/: theme.json
js/: copyToClipboard.js  monarchTokensProvider.js  service-worker.js  theme.js
js/editor/: ide.js
js/monaco-tweaks/: errorHighlighting.js
snippets/monaco-3640001003124600/js/release/: editor.js
snippets/ram-webgui-8ad459c9f4c1eba4/js/: completionItemProvider.js
snippets/ram-webgui-962f57e8bf78940b/js/: copyToClipboard.js
snippets/ram-webgui-e733985697d4ed28/js/: monarchTokensProvider.js  theme.js
src/: about_popup.rs  app.rs  code_editor.rs  code_runner.rs  footer.rs  header.rs  lib.rs  main.rs  memory.rs  monaco_ram.rs  monaco_tweaks.rs  show_content.rs  store.rs  utils.rs
src/_bin/: hydrated.rs
src/client/css/: loader.scss
src/client/js/: loader.js  register.js
src/client/js/editor/themes/: monokai.json
src/io/: custom_reader.rs  custom_writer.rs  input.rs  mod.rs  output.rs
src/utils/: after_hydration.rs  mod.rs
styles/: about.css  about.scss  console.css  fonts.css  fonts.scss  index.scss  loader.scss  monaco-tweaks.css  scrollbar.scss  selection.css  style.css  style.scss
