[package]
name = "ram-webgui"
version = "0.1.3"
edition = "2021"
description = "Webgui for ramemu"
readme = "README.md"
repository = "https://github.com/AVO-cado-team/ram-webgui"
license = "GPL3"
keywords = ["yew", "trunk", "ram"]
categories = ["gui", "wasm", "web-programming"]
default-run = "ram-webgui"

[[bin]]
name = "ram-webgui"
path = "src/main.rs"

# [[bin]]
# name = "hydrated"
# path = "src/bin/hydrated.rs"

[features]
ssr = ["yew/ssr", "yew/hydration", "futures"]

[profile.release]
lto = true
codegen-units = 1
strip = "debuginfo"
opt-level = 3

[dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2.84"
js-sys = "0.3.61"
wasm-logger = "0.2.0"
log = "0.4.17"
urlencoding = "2.1.2"
console_error_panic_hook = "0.1.7"
futures = { version = "0.3.28", optional = true }
wasm-bindgen-futures = "0.4.37"
gloo = "0.11.0"

[dependencies.web-sys]
version = "0.3.61"
features = ['Document', 'Window', 'Element', 'HtmlElement', 'Node', 'CssStyleDeclaration', 'HtmlAnchorElement']

[dependencies.monaco]
git = "https://github.com/siku2/rust-monaco/"
rev = "bbc6523c0f97786a22d76ced650e6b31a1971f7a"
features = ["yew", "yew-components"]

[dependencies.ramemu]
git = "https://github.com/AVO-cado-team/ramemu.git"


